--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_beep: ^1.0.0
   connectivity: ^3.0.6
   carousel_slider: ^4.2.1
+  cached_network_image: ^3.3.1
 
 dev_dependencies:
   flutter_test:
@@ -67,6 +68,7 @@ flutter:
   uses-material-design: true
   assets: 
     - assets/lottie/
+    - assets/images/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
